--- a/src/test/resources/gaillard/mongo/mongodb.properties
+++ b/src/test/resources/gaillard/mongo/mongodb.properties
@@ -1,4 +1,4 @@
-default.mongodb.uri=${default.mongo.url}
+default.mongodb.uri=${default.mongodb.uri}
 default.mongodb.database=${default.mongodb.database}
 default.mongodb.user=${default.mongodb.user}
-default.mongodb.password=${default.mongodb.pass}
+default.mongodb.password=${default.mongodb.password}
