--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>gaillard</groupId>
-    <artifactId>mongo-queueCore-java</artifactId>
+    <groupId>ru.infon.queue</groupId>
+    <artifactId>mongo-queue</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
