async queue implementation done + test;

--- a/src/test/resources/gaillard/mongo/mongodb.properties
+++ b/src/test/resources/gaillard/mongo/mongodb.properties
@@ -2,3 +2,5 @@ default.mongodb.uri=${default.mongodb.uri}
 default.mongodb.database=${default.mongodb.database}
 default.mongodb.user=${default.mongodb.user}
 default.mongodb.password=${default.mongodb.password}
+queue.mongodb.collection=box_queue
+queue.fetch.limit=5
