--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.infon.queue</groupId>
-    <artifactId>box-queue</artifactId>
+    <groupId>ru.infon.oss</groupId>
+    <artifactId>queue-box</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
     <properties>
@@ -24,6 +24,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.8.7</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
