--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 
     <developers>
         <developer>
-            <name>Konstantin Lychagin</name>
-            <email>opensource@sinfon.ru</email>
+            <name>Infon Team</name>
+            <email>opensource@infon.ru</email>
             <organization>Infon</organization>
             <organizationUrl>http://oss.infon.ru</organizationUrl>
         </developer>
