--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <developers>
         <developer>
-            <name>Konstantin Lychagin</name>
+            <name>Infon team</name>
             <email>opensource@sinfon.ru</email>
             <organization>Infon</organization>
             <organizationUrl>http://oss.infon.ru</organizationUrl>
