updated to latest libs; tests with testcontainers; fixed mongo 4.2 index issue

--- a/src/test/resources/gaillard/mongo/mongodb.properties
+++ b/src/test/resources/gaillard/mongo/mongodb.properties
@@ -1,7 +1,7 @@
-default.mongodb.uri=${default.mongodb.uri}
-default.mongodb.database=${default.mongodb.database}
-default.mongodb.user=${default.mongodb.user}
-default.mongodb.password=${default.mongodb.password}
+default.mongodb.uri=localhost:27017
+default.mongodb.database=admin
+default.mongodb.user=test
+default.mongodb.password=test
 
 mongodb.queue.collection=box_queue
 queue.fetch.limit=5
